--- a/RealEstate/css/style.scss
+++ b/RealEstate/css/style.scss
@@ -60,7 +60,7 @@ a{
   line-height: 1.1;
   letter-spacing: 0.35em;
   text-align: center;
-  margin-left: 7px;
+  margin-left: 9.5px;
   @include mq(xl){
     margin-left: 10px;
   }
@@ -441,13 +441,13 @@ header {
     }
     margin-top: 6px;
     &-heading{
-      margin-top: 10px;
+      margin-top: 14px;
       font-size: 2rem;
-      line-height:1.65;
+      line-height:1.35;
       font-weight: 600;
     }
     &-detail{
-      margin-top: 8px;
+      margin-top: 9.5px;
       font-size: 1.6rem;
       line-height: 1.5625;
     }
@@ -518,7 +518,10 @@ header {
 }
 // works
 #works{
-  padding:50px 0;
+  padding: {
+    top: 45px;
+    bottom:50px;
+  }
   @include mq(xl){
     padding-top:80px;
     padding-bottom: 73px;
@@ -985,7 +988,7 @@ header {
   .form-control-checkbox{
     display: flex;
     flex-direction: column;
-    margin-top: 29px;
+    margin-top: 24px;
     @include mq(ll){
       margin-top: 49px;
     }
@@ -1020,8 +1023,12 @@ header {
           margin-bottom: 0;
           display: block;
           width:100%;
-          padding-left: 40px;
+          padding-left: 30px;
           position: relative;
+          margin-top: 1.8px;
+          @include mq(ll){
+            padding-left: 40px;
+          }
           &::after{
             position: absolute;
             content:'';
@@ -1070,6 +1077,8 @@ header {
   .question-lbl{
     width:100%;
     margin-bottom: 0;
+    line-height: 1.35;
+  }
   }
   .protection-lbl{
     width: 100%;
@@ -1085,22 +1094,36 @@ header {
     }
   }
   // 個人情報保護方針
-  .personal-information-protection{
+  .scroll-container{
     background-color: #fff;
     padding: {
       top: 22px;
       bottom: 30px;
       left: 30px;
-      right: 50px;
+      right: 10px;
     }
-    height: 310px;
-    overflow-y: auto;
     @include mq(ll){
       padding-top: 39px;
       padding-left: 40px;
       padding-right: 52px;
       padding-right: 63px;
       letter-spacing: -0.05em;
+    }
+  }
+  .personal-information-protection{
+    padding-right: 30px;
+    height: 310px;
+    overflow-y: auto;
+    &::-webkit-scrollbar{
+      width:10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #9B9B9B;
+      box-shadow:0 0 0 1px rgba(0,0,0, .3);
+      height: 30px;
+    }
+    &::-webkit-scrollbar-track-piece {
+      padding:100px 0;
     }
     h4{
       font-weight: 200;
@@ -1128,10 +1151,10 @@ header {
       }
     }
   }
-}
+
 .btn{
   width: 100%;
-  margin-top: 46px;
+  margin-top: 43px;
   padding:10px 68px;
   transition: .5s;
   @include mq(ll){
