--- a/RealEstate/css/style.css
+++ b/RealEstate/css/style.css
@@ -239,13 +239,20 @@ header #site-title {
   content: '';
   height: 2px;
   width: 100%;
-  background: #fff;
   -webkit-transform: scale(0, 1);
           transform: scale(0, 1);
   -webkit-transform-origin: left top;
           transform-origin: left top;
   -webkit-transition: .3s;
   transition: .3s;
+}
+
+.font-white + .header-menu nav ul li a::after {
+  background: #fff;
+}
+
+.font-black + .header-menu nav ul li a::after {
+  background: #000;
 }
 
 .header-menu nav ul li a:hover {
@@ -700,7 +707,7 @@ header #site-title {
 }
 
 .work:not(:first-of-type) {
-  margin-top: 29px;
+  margin-top: 24px;
 }
 
 @media screen and (min-width: 900px) {
@@ -717,6 +724,7 @@ header #site-title {
   font-size: 1.6rem;
   line-height: 1.5625;
   font-weight: 200;
+  margin-top: 5px;
 }
 
 @media screen and (min-width: 900px) {
@@ -956,7 +964,7 @@ header #site-title {
   margin-top: 44px;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1080px) {
   .company-contents {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -968,12 +976,11 @@ header #site-title {
 }
 
 .access-map {
-  min-width: 315px;
   min-height: 300px;
   position: relative;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1080px) {
   .access-map {
     width: 600px;
     height: 400px;
@@ -992,9 +999,10 @@ header #site-title {
   margin-top: 20px;
   padding: 20px;
   padding-top: 11px;
+  padding-bottom: 16px;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1080px) {
   .company-description {
     position: absolute;
     top: 181px;
@@ -1013,7 +1021,7 @@ header #site-title {
   line-height: 1.75;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1080px) {
   .company-name {
     margin-top: 22px;
   }
@@ -1026,7 +1034,7 @@ header #site-title {
   margin-top: 8px;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1080px) {
   .company-address {
     margin-top: 7px;
   }
@@ -1037,7 +1045,7 @@ header #site-title {
   font-size: 1.6rem;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1080px) {
   .company-phone-number {
     margin-top: 10px;
   }
@@ -1049,7 +1057,7 @@ header #site-title {
   letter-spacing: 0.015em;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1080px) {
   .company-email {
     margin-top: 8px;
   }
@@ -1110,6 +1118,22 @@ header #site-title {
   }
 }
 
+.contact-form .input-width {
+  width: 100%;
+}
+
+@media screen and (min-width: 900px) {
+  .contact-form .input-width {
+    width: 70%;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .contact-form .input-width {
+    width: 663px;
+  }
+}
+
 .contact-form .form-control-name {
   margin-top: 40px;
 }
@@ -1120,12 +1144,16 @@ header #site-title {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-column-gap: 11px;
-            column-gap: 11px;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
+}
+
+.contact-form .form-control-name label {
+  margin-bottom: 6px;
 }
 
 @media screen and (min-width: 900px) {
@@ -1136,12 +1164,15 @@ header #site-title {
 
 .contact-form .form-control-name input[type=text] {
   font-size: 1.5rem;
+  padding-top: 14px;
+  padding-bottom: 13px;
+  letter-spacing: 0.05em;
 }
 
 @media screen and (min-width: 900px) {
   .contact-form .form-control-name input[type=text] {
     padding: 12px 0;
-    padding-left: 21px;
+    padding-left: 20px;
     letter-spacing: 0.1em;
   }
 }
@@ -1150,9 +1181,16 @@ header #site-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 24px;
+  margin-top: 36px;
   -webkit-column-gap: 40px;
           column-gap: 40px;
+}
+
+@media screen and (max-width: 374px) {
+  .contact-form .form-control-sex {
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+  }
 }
 
 @media screen and (min-width: 900px) {
@@ -1161,6 +1199,8 @@ header #site-title {
         -ms-flex-align: start;
             align-items: flex-start;
     margin-top: 50px;
+    -webkit-column-gap: 0px;
+            column-gap: 0px;
   }
 }
 
@@ -1171,14 +1211,16 @@ header #site-title {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-column-gap: 25px;
-          column-gap: 25px;
+  -webkit-column-gap: 21px;
+          column-gap: 21px;
 }
 
 @media screen and (min-width: 900px) {
   .contact-form .form-control-sex .radio-form {
     margin-left: 5px;
     margin-top: -4px;
+    -webkit-column-gap: 0px;
+            column-gap: 0px;
   }
 }
 
@@ -1238,7 +1280,7 @@ header #site-title {
     display: flex;
     -webkit-column-gap: 23px;
             column-gap: 23px;
-    margin-top: 38px;
+    margin-top: 41px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1257,7 +1299,6 @@ header #site-title {
   padding-bottom: 9px;
   padding-left: 18px;
   font-size: 1.7rem;
-  width: 100%;
 }
 
 @media screen and (min-width: 900px) {
@@ -1265,7 +1306,6 @@ header #site-title {
     padding: 12px 0;
     padding-left: 17px;
     letter-spacing: 0.05em;
-    width: 663px;
     font-size: 1.5rem;
     margin-top: -6px;
   }
@@ -1282,7 +1322,7 @@ header #site-title {
     display: flex;
     -webkit-column-gap: 23px;
             column-gap: 23px;
-    margin-top: 54px;
+    margin-top: 58px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1295,7 +1335,6 @@ header #site-title {
   background-position: right 18px top 50%;
   padding: 13px 0;
   padding-left: 20px;
-  width: 100%;
   font-size: 1.6rem;
 }
 
@@ -1303,7 +1342,6 @@ header #site-title {
   .contact-form .form-control-type select {
     padding: 19px 0;
     padding-left: 17px;
-    width: 663px;
     font-size: 1.8rem;
     margin-top: -6px;
     background-position: right 21px top 50%;
@@ -1328,8 +1366,18 @@ header #site-title {
   }
 }
 
+.contact-form .form-control-textarea label {
+  margin-bottom: 1px;
+}
+
 .contact-form .form-control-textarea textarea {
   margin-top: 5px;
+}
+
+@media screen and (min-width: 900px) {
+  .contact-form .form-control-textarea textarea {
+    margin-top: 12px;
+  }
 }
 
 .contact-form .form-control-checkbox {
@@ -1340,7 +1388,7 @@ header #site-title {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-top: 24px;
+  margin-top: 36px;
 }
 
 @media screen and (min-width: 900px) {
@@ -1367,10 +1415,16 @@ header #site-title {
   row-gap: 1px;
 }
 
+@media screen and (max-width: 374px) {
+  .contact-form .form-control-checkbox .checkbox-form {
+    font-size: 1.4rem;
+  }
+}
+
 @media screen and (min-width: 900px) {
   .contact-form .form-control-checkbox .checkbox-form {
     line-height: 2.0625;
-    margin-top: 7px;
+    margin-top: 2px;
     row-gap: 3px;
   }
 }
@@ -1391,6 +1445,12 @@ header #site-title {
 @media screen and (min-width: 900px) {
   .contact-form .form-control-checkbox .checkbox-control {
     width: 25%;
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .contact-form .form-control-checkbox .checkbox-control {
     font-size: 1.8rem;
   }
 }
@@ -1410,9 +1470,12 @@ header #site-title {
   }
 }
 
-.contact-form .form-control-checkbox .checkbox-control label::after {
+.contact-form .form-control-checkbox .checkbox-control label::before, .contact-form .form-control-checkbox .checkbox-control label::after {
   position: absolute;
   content: '';
+}
+
+.contact-form .form-control-checkbox .checkbox-control label::after {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -1420,6 +1483,23 @@ header #site-title {
   width: 20px;
   height: 20px;
   background-color: #fff;
+}
+
+.contact-form .form-control-checkbox .checkbox-control label::before {
+  border-bottom: 2px solid #000;
+  border-left: 2px solid #000;
+  height: 9px;
+  width: 15px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  top: 7px;
+  left: 3px;
+  z-index: 1;
+  opacity: 0;
+}
+
+.contact-form .form-control-checkbox .checkbox-control input:checked + label::before {
+  opacity: 1;
 }
 
 .contact-form .form-control-protection {
@@ -1441,16 +1521,9 @@ header #site-title {
 
 .contact-form input[type=text] {
   background-color: #fff;
-  width: 100%;
   padding-top: 17px;
   padding-left: 20px;
   padding-bottom: 17px;
-}
-
-@media screen and (min-width: 900px) {
-  .contact-form input[type=text] {
-    width: 630px;
-  }
 }
 
 .contact-form input[type=radio] {
@@ -1477,6 +1550,7 @@ header #site-title {
 
 .contact-form .protection-lbl {
   width: 100%;
+  margin-bottom: 2px;
 }
 
 @media screen and (min-width: 900px) {
@@ -1496,7 +1570,7 @@ textarea {
 
 .scroll-container {
   background-color: #fff;
-  padding-top: 22px;
+  padding-top: 26px;
   padding-bottom: 30px;
   padding-left: 30px;
   padding-right: 10px;
@@ -1504,7 +1578,8 @@ textarea {
 
 @media screen and (min-width: 900px) {
   .scroll-container {
-    padding-top: 14px;
+    margin-top: 12px;
+    padding-top: 9px;
     padding-left: 40px;
     padding-right: 10px;
     letter-spacing: -0.05em;
@@ -1553,7 +1628,7 @@ textarea {
 }
 
 .personal-information-protection h4:not(:first-of-type) {
-  margin-top: 10px;
+  margin-top: 6px;
 }
 
 @media screen and (min-width: 900px) {
@@ -1565,7 +1640,7 @@ textarea {
 .personal-information-protection p {
   font-size: 1.6rem;
   margin-top: 5px;
-  line-height: 1.8;
+  line-height: 1.85;
 }
 
 @media screen and (min-width: 900px) {
@@ -1578,10 +1653,16 @@ textarea {
 
 .btn {
   width: 100%;
-  margin-top: 43px;
+  margin-top: 42.5px;
   padding: 10px 68px;
   -webkit-transition: .5s;
   transition: .5s;
+}
+
+@media screen and (max-width: 374px) {
+  .btn {
+    padding: 10px 0;
+  }
 }
 
 @media screen and (min-width: 900px) {
