--- a/RealEstate/css/style.scss
+++ b/RealEstate/css/style.scss
@@ -113,6 +113,7 @@ a{
   width: 68px;
   height: 68px;
   border-radius: 50%;
+  cursor: pointer;
 }
 .arrow{
   position: absolute;
@@ -216,6 +217,7 @@ header {
   height: 50px;
   background-color: #fff;
   position: relative;
+  cursor: pointer;
   span {
     @include hamburger-line(25px);
     &::before {
@@ -678,6 +680,7 @@ header {
   .news-footer{
     position: relative;
     height: 74px;
+    display: block;
     &:hover{
       animation: swing 1.5s infinite;
     }
@@ -1210,6 +1213,7 @@ header {
   width: 100%;
   margin-top: 42.5px;
   padding:10px 68px;
+  cursor: pointer;
   @media screen and (max-width:374px) {
     padding:10px 0;
   }
