--- a/RealEstate/css/style.scss
+++ b/RealEstate/css/style.scss
@@ -1086,7 +1086,7 @@ header {
             height: 9px;
             width: 15px;
             transform: rotate(-45deg);
-            top: 12px;
+            top: 30%;
             left: 3px;
             z-index: 1;
             opacity: 0;
