--- a/RealEstate/css/style.scss
+++ b/RealEstate/css/style.scss
@@ -311,6 +311,15 @@ header {
   }
 }
 .slider{
+  &::after{
+    content:'';
+    background-color: rgba(0,0,0,.2);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
   div
   {
     background-position: top;
@@ -582,14 +591,22 @@ header {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  width:450px;
-  height: 280px;
+  width:90%;
+  max-width: 450px;
+  height: auto;
+  max-height: 280px;
   padding: 15px {
     bottom:10px;
   };
+  img{
+    width:100%;
+  }
 }
 .modal-img-description{
+  font-size: 1.4rem;
+  @include mq(md){
   font-size: 1.6rem;
+}
   margin-top: 10px;
   margin-bottom: 15px;
 }
