update header sp

--- a/MusicSchool/_assets/scss/object/component/_hamburger.scss
+++ b/MusicSchool/_assets/scss/object/component/_hamburger.scss
@@ -71,3 +71,11 @@
         color: #fff;
     }
 }
+.hamburger-bg{
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+}
