--- a/MusicSchool/_assets/scss/foundation/_base.scss
+++ b/MusicSchool/_assets/scss/foundation/_base.scss
@@ -4,8 +4,19 @@
 
 body{
     font-family: "YuGothic","Yu Gothic","メイリオ","MS Pゴシック", sans-serif;
-    font-size: 10px;
 }
 a {
     cursor: pointer;
+}
+.pc {
+    display: none;
+    @include mq(lg){
+        display:block;
+    }
+}
+.no-pc {
+    display: block;
+    @include mq(lg){
+        display: none;
+    }
 }
