--- a/MusicSchool/_assets/scss/object/component/_button.scss
+++ b/MusicSchool/_assets/scss/object/component/_button.scss
@@ -1,1 +1,15 @@
+@use "../../foundation/system" as *;
 @use "../../foundation/variable" as v;
+
+.button {
+  cursor: pointer;
+}
+.button--red {
+  background-color: v.$red;
+  color: #fff;
+}
+.button--small{
+  width: 150px;
+  padding: 14.2px 30px;
+  font-size: rem(15);
+}
