--- a/MusicSchool/_assets/scss/layout/_header.scss
+++ b/MusicSchool/_assets/scss/layout/_header.scss
@@ -2,9 +2,9 @@
 --------------------------- */
 @use "./../foundation/system" as *;
 .header {
-    position: fixed;
     top:0;
     left:0;
+    background: #fff;
     width: 100%;
     max-width: 1080px;
     height: auto;
