--- a/RealEstate/css/style.scss
+++ b/RealEstate/css/style.scss
@@ -916,6 +916,7 @@ header {
       column-gap: 0px;
     }
     label{
+      cursor: pointer;
       font-size: 1.7rem;
       padding-left: 50px;
       position:relative;
@@ -994,6 +995,7 @@ header {
       align-items: center;
     }
     select{
+      cursor: pointer;
       background-color: #fff;
       background: {
         image:url(../images/triangle.svg);
@@ -1074,6 +1076,7 @@ header {
           font-size: 1.8rem;
         }
         label{
+          cursor: pointer;
           margin-bottom: 0;
           display: block;
           width:100%;
